Attempt 2 to fix hours section on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -251,7 +251,8 @@ h5,
 }
 .showIcon {
   text-align: right;
-  padding-right: 40px;
+  padding-left: 0;
+  padding-right: 50px;
 }
 hr {
   margin: 0 10px;
